--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Le Header -->
     <header>
         <div class="Titres">
             <h1>Nathan</h1>
@@ -23,6 +24,7 @@
             </div>
         </nav>
     </header>
+    <!-- Le main -->
     <main>
         <section id="Accueil">
             <h2>Accueil</h2>
@@ -56,7 +58,7 @@
                 <p>Ceci est mon troisième et dernier projet sur les raccourcis VSCODE,les commandes du terminal et les raccourcis emmet.</p>
             </article>
         </section>
-        
+        <!-- Formulaire -->
         <section id="Contact">
             <h2>Contactez-Moi</h2>
             <form action="" method="get" class="form-example">
@@ -84,6 +86,7 @@
               </form>
         </section>
     </main>
+    <!-- Footer -->
     <footer>
         <section>
             <p> &copy; copyright – tous droits réservés</p>
