--- a/portfolio.html
+++ b/portfolio.html
@@ -73,17 +73,15 @@
                 <div class="form-sujet">
                     <label for="sujet">Raison du message: </label>
                     <input type="text" name="sujet" id="sujet" required />
-                  </div>
-                  <label for="story">Ecrivez votre message..:</label>
-                    <div>
-                        <textarea id="story" name="story" rows="5" cols="33">
-                
-                        </textarea>
-                    </div>  
+                </div>
+                    <label for="story">Ecrivez votre message..:</label>
+                <div>
+                        <textarea id="story" name="story" rows="5" cols="33"></textarea>
+                </div>  
                 <div class="form-envoyer">
                   <input type="submit" value="Envoyer" />
                 </div>
-              </form>
+            </form>
         </section>
     </main>
     <!-- Footer -->
